--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,8 @@
       "downloadpdf": "Download PDF",
       "sendmail": "Send MAIL"
     },
+    "attachments": "Attachments",
+    "items": "Items",
     "open": "Open",
     "close": "Closed",
     "status": "Status",
@@ -65,7 +67,8 @@
       }
     },
     "invoice": {
-      "invoiceId": "Invoice id"
+      "invoiceId": "Invoice id",
+      "newInvoice": "New Invoice"
     }
   },
   "error": {
