--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,6 +14,7 @@
       "downloadpdf": "Télécharger PDF",
       "sendmail": "Envoi Email"
     },
+    "title": "Titre",
     "attachments": "Pièces jointes",
     "items": "Articles",
     "open": "En cours",
@@ -69,6 +70,13 @@
     "invoice": {
       "invoiceId": "N° Facture",
       "newInvoice": "Nouvelle facture"
+    },
+    "items": {
+      "id": "Id Article",
+      "project": "Projet",
+      "priceUnit": "Unité de prix",
+      "vatRate": "% TVA",
+      "period": "Période"
     }
   },
   "error": {
