translate invoice page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,8 @@
       "downloadpdf": "Download PDF",
       "sendmail": "Send MAIL"
     },
+    "name": "Name",
+    "contentType": "Content-Type",
     "title": "Title",
     "attachments": "Attachments",
     "items": "Items",
