--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,6 +14,8 @@
       "downloadpdf": "Télécharger PDF",
       "sendmail": "Envoi Email"
     },
+    "name": "Nom",
+    "contentType": "Content-Type",
     "title": "Titre",
     "attachments": "Pièces jointes",
     "items": "Articles",
