--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,8 @@
       "downloadpdf": "Download PDF",
       "sendmail": "Send MAIL"
     },
+    "type": "Type",
+    "description": "Description",
     "name": "Name",
     "contentType": "Content-Type",
     "title": "Title",
@@ -82,6 +84,10 @@
       "period": "Period",
       "qty": "Quantity",
       "unitOfMeasure": "Unit of measure"
+    },
+    "product": {
+      "searchProduct": "Search for a product",
+      "id": "Id"
     }
   },
   "error": {
