--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,6 +15,8 @@
       "downloadpdf": "Télécharger PDF",
       "sendmail": "Envoi Email"
     },
+    "type": "Type",
+    "description": "Description",
     "name": "Nom",
     "contentType": "Content-Type",
     "title": "Titre",
@@ -82,6 +84,10 @@
       "period": "Période",
       "qty": "Quantité",
       "unitOfMeasure": "Mesure d'unité"
+    },
+    "product": {
+      "searchProduct": "Rechercher un produit",
+      "id": "Id"
     }
   },
   "error": {
