--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -16,6 +16,9 @@
       "downloadpdf": "Télécharger PDF",
       "sendmail": "Envoi Email"
     },
+    "firstname": "Prénom",
+    "lastname": "Nom",
+    "mail": "Email",
     "days": "Jours",
     "type": "Type",
     "description": "Description",
