--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -98,6 +98,11 @@
     "product": {
       "searchProduct": "Search for a product",
       "id": "Id"
+    },
+    "profile": {
+      "new": "New Profile",
+      "address": "Address",
+      "general": "General"
     }
   },
   "error": {
