--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -98,6 +98,11 @@
     "product": {
       "searchProduct": "Rechercher un produit",
       "id": "Id"
+    },
+    "profile": {
+      "new": "Nouveau Profil",
+      "address": "Adresse",
+      "general": "Géneral"
     }
   },
   "error": {
