--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
       "delete": "Delete",
       "save": "Save",
       "change": "Change",
-      "consult": "Contult",
+      "consult": "Consult",
       "preview": "Preview",
       "downloadpdf": "Download PDF",
       "sendmail": "Send MAIL"
