--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -119,6 +119,12 @@
       "general": "General",
       "active": "active profile?",
       "customer": "customer profile?"
+    },
+    "home": {
+      "greeting": "Welcome.",
+      "readmore": "Read more about the application here.",
+      "getstart": "Get start",
+      "getstarthere": "Get start here."
     }
   },
   "error": {
