--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -119,6 +119,12 @@
       "general": "Géneral",
       "active": "profil actif?",
       "customer": "profil client?"
+    },
+    "home": {
+      "greeting": "Bienvenue.",
+      "readmore": "Lisez un peu plus sur cette application.",
+      "getstart": "Commencez",
+      "getstarthere": "Commencez ici."
     }
   },
   "error": {
