--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,7 +72,8 @@
     "invoice": "Invoice",
     "profile": "Profiles",
     "product": "Products",
-    "setting": "Settings"
+    "setting": "Settings",
+    "home": "Home"
   },
   "page": {
     "dashboard": {
