--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -72,7 +72,8 @@
     "invoice": "Factuur",
     "profile": "Profielen",
     "product": "Producten",
-    "setting": "Instellingen"
+    "setting": "Instellingen",
+    "home": "Onthaal"
   },
   "page": {
     "dashboard": {
