--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,9 +1,12 @@
 {
   "main": {
-    "title": "nvoicer"
+    "title": "nvoicer",
+    "gdpr": "We are using cookies that help us give you the best experience of our site. By continuing to use the site, you are agreeing to our use of cookies."
   },
   "common": {
     "action": {
+      "accept": "Accept",
+      "refuse": "Refuse",
       "clearselection": "Clear selection",
       "add": "Add",
       "edit": "Edit",
