--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -133,6 +133,7 @@
     }
   },
   "error": {
+    "unexpected": "Fout",
     "forbidden": "Verboden. U hebt geen toegang tot deze bron. Meld u aan met de juiste toegangen."
   }
 }
