fix 404 error page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -132,6 +132,7 @@
     }
   },
   "error": {
+    "notfound": "La page n'existe pas",
     "unexpected": "Erreur",
     "forbidden": "Vous n'êtes pas autorisé à accéder à cette page. Veuillez vous connecter."
   }
