auth guard & gdpr accept in localstorage

--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -133,6 +133,7 @@
     }
   },
   "error": {
+    "unauthorized": "Verboden.",
     "notfound": "Niet gevonden",
     "unexpected": "Fout",
     "forbidden": "Verboden. U hebt geen toegang tot deze bron. Meld u aan met de juiste toegangen."
