--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -136,5 +136,8 @@
     "notfound": "La page n'existe pas",
     "unexpected": "Erreur",
     "forbidden": "Vous n'êtes pas autorisé à accéder à cette page. Veuillez vous connecter."
+  },
+  "datatable":{
+    "hide": "Cacher colonne"
   }
 }
