style error page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,6 +132,7 @@
     }
   },
   "error": {
+    "unauthorized": "Forbidden access",
     "notfound": "Not found",
     "unexpected": "Unexpected error",
     "forbidden": "Forbidden. You are not allowed to access this resource. Please login with the right accesses."
