--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -112,7 +112,8 @@
     "product": {
       "searchProduct": "Rechercher un produit",
       "id": "Id",
-      "downloadtemplatecsv": "Télécharger le template CSV"
+      "downloadtemplatecsv": "Télécharger le template CSV",
+      "uploadcsv": "Charger CSV"
     },
     "settings": {
       "currentInvoiceNumber": "N° Facture courante",
