--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -113,7 +113,8 @@
     "product": {
       "searchProduct": "Zoeken naar een product",
       "id": "Id",
-      "downloadtemplatecsv": "Downloaden Template CSV"
+      "downloadtemplatecsv": "Downloaden Template CSV",
+      "uploadcsv": "Uploaden CSV"
     },
     "settings": {
       "currentInvoiceNumber": "Huidig ​​factuurnummer",
