fix error message

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -128,7 +128,7 @@
       "customer": "customer profile?"
     },
     "home": {
-      "greeting": "Welcome.",
+      "greeting": "Welcome",
       "readmore": "Read more about the application here.",
       "getstart": "Get start",
       "getstarthere": "Get start here."
