--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -128,7 +128,7 @@
       "customer": "profil client?"
     },
     "home": {
-      "greeting": "Bienvenue.",
+      "greeting": "Bienvenue",
       "readmore": "Lisez un peu plus sur cette application.",
       "getstart": "Commencez",
       "getstarthere": "Commencez ici."
