--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -129,7 +129,7 @@
       "customer": "klantprofiel?"
     },
     "home": {
-      "greeting": "Welkom.",
+      "greeting": "Welkom",
       "readmore": "Lees hier meer over de toepassing.",
       "getstart": "Begin",
       "getstarthere": "Begin hier."
