generate csv from datatable

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
   },
   "common": {
     "action": {
+      "generatecsv": "Generate CSV",
       "accept": "Accept",
       "refuse": "Refuse",
       "clearselection": "Clear selection",
