--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,6 +5,7 @@
   },
   "common": {
     "action": {
+      "generatecsv": "Génerer CSV",
       "accept": "Accepter",
       "refuse": "Refuser",
       "clearselection": "Vider selection",
