--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -142,6 +142,7 @@
     "forbidden": "Forbidden. You are not allowed to access this resource. Please login with the right accesses."
   },
   "datatable":{
-    "hide": "Hide column"
+    "hide": "Hide column",
+    "option":"Options"
   }
 }
