--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -20,7 +20,8 @@
       "consult": "Consulter",
       "preview": "Aperçu",
       "downloadpdf": "Télécharger PDF",
-      "sendmail": "Envoi Email"
+      "sendmail": "Envoi Email",
+      "reset":"Réinitialiser"
     },
     "yourLogo": "Votre logo",
     "street": "Rue",
